--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:elevation="15dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/logo_img"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/futsallogo"
+            android:layout_marginLeft="15dp" />
+
+
+
+        <ImageView
+            android:id="@+id/search_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_search"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp" />
+
+    </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:elevation="15dp"
+        android:layout_alignParentBottom="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/home_icon"
+                android:layout_width="@dimen/bottom_menu_size"
+                android:layout_height="@dimen/bottom_menu_size"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/menu_margin"
+                android:src="@drawable/ball"
+                android:layout_marginLeft="@dimen/menu_margin" />
+
+
+            <ImageView
+                android:id="@+id/search_icon"
+                android:layout_width="@dimen/bottom_menu_size"
+                android:layout_height="@dimen/bottom_menu_size"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/add_icon"
+                android:layout_toEndOf="@+id/home_icon"
+                android:src="@drawable/commnity"
+                android:layout_toLeftOf="@+id/add_icon"
+                android:layout_toRightOf="@+id/home_icon" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/add_icon"
+                android:layout_width="@dimen/bottom_menu_size"
+                android:layout_height="@dimen/bottom_menu_size"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/user"
+                />
+
+            <ImageView
+                android:id="@+id/heart_icon"
+                android:layout_width="@dimen/bottom_menu_size"
+                android:layout_height="@dimen/bottom_menu_size"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/logout"
+                android:layout_toEndOf="@+id/add_icon"
+                android:src="@drawable/booking"
+                android:layout_toLeftOf="@+id/logout"
+                android:layout_toRightOf="@+id/add_icon" />
+
+            <ImageView
+                android:id="@+id/logout"
+                android:layout_width="@dimen/bottom_menu_size"
+                android:layout_height="@dimen/bottom_menu_size"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="@dimen/menu_margin"
+                android:src="@drawable/back"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/menu_margin" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
