--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -42,12 +41,22 @@
     </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+    <LinearLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header_layout"
+        android:orientation="vertical"
+        android:layout_above="@+id/bottom_layout">
+
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
-        android:gravity="center"
+        android:gravity="start"
         android:elevation="15dp"
         android:layout_alignParentBottom="true">
 
@@ -59,29 +68,58 @@
                 android:id="@+id/home_icon"
                 android:layout_width="@dimen/bottom_menu_size"
                 android:layout_height="@dimen/bottom_menu_size"
-                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/menu_margin"
-                android:src="@drawable/ball"
+                android:src="@drawable/field"
                 android:layout_marginLeft="@dimen/menu_margin" />
 
+            <TextView
+                android:id="@+id/tvFutsal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/home_icon"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="-1dp"
+                android:layout_marginEnd="-5dp"
+                android:layout_marginRight="-5dp"
+                android:layout_toStartOf="@+id/search_icon"
+                android:layout_toLeftOf="@+id/search_icon"
+                android:gravity="center"
+                android:text="Futsal"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/search_icon"
                 android:layout_width="@dimen/bottom_menu_size"
                 android:layout_height="@dimen/bottom_menu_size"
-                android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/add_icon"
                 android:layout_toEndOf="@+id/home_icon"
-                android:src="@drawable/commnity"
+                android:src="@drawable/community"
                 android:layout_toLeftOf="@+id/add_icon"
                 android:layout_toRightOf="@+id/home_icon" />
+            <TextView
+                android:id="@+id/tvPost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/search_icon"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/tvFutsal"
+                android:layout_toStartOf="@+id/add_icon"
+                android:text="Post"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_toRightOf="@+id/tvFutsal"
+                android:layout_toLeftOf="@+id/add_icon" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/add_icon"
-                android:layout_width="@dimen/bottom_menu_size"
-                android:layout_height="@dimen/bottom_menu_size"
-                android:layout_centerVertical="true"
+                android:layout_width="@dimen/user_icon_size"
+                android:layout_height="@dimen/user_icon_size"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/user"
                 />
 
@@ -89,23 +127,45 @@
                 android:id="@+id/heart_icon"
                 android:layout_width="@dimen/bottom_menu_size"
                 android:layout_height="@dimen/bottom_menu_size"
-                android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/logout"
                 android:layout_toEndOf="@+id/add_icon"
                 android:src="@drawable/booking"
                 android:layout_toLeftOf="@+id/logout"
                 android:layout_toRightOf="@+id/add_icon" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_toStartOf="@+id/tvLogout"
+                android:text="Booking"
+                android:textStyle="bold"
+                android:layout_marginEnd="29dp"
+                android:layout_toLeftOf="@+id/tvLogout"
+                android:layout_marginRight="25dp" />
+
+
             <ImageView
                 android:id="@+id/logout"
                 android:layout_width="@dimen/bottom_menu_size"
                 android:layout_height="@dimen/bottom_menu_size"
-                android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/menu_margin"
                 android:src="@drawable/back"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/menu_margin" />
+            <TextView
+                android:id="@+id/tvLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:text="LogOut"
+                android:textStyle="bold"
+                android:layout_marginEnd="15dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp" />
+
 
         </RelativeLayout>
 
