--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="bottom_menu_size">23dp</dimen>
+    <dimen name="bottom_menu_size">30dp</dimen>
+    <dimen name="user_icon_size">45dp</dimen>
     <dimen name="menu_margin">25dp</dimen>
     <dimen name="footer_menu_size">23dp</dimen>
 </resources>
