--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,33 +10,33 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/white"
+        android:backgroundTint="@color/green"
         android:elevation="15dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/logo_img"
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/futsallogo"
-            android:layout_marginLeft="15dp" />
+            <ImageView
+                android:id="@+id/logo_img"
+                android:layout_width="95dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/futsallogo"
+                android:layout_marginLeft="15dp" />
 
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_img"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/user"
-            android:layout_alignParentRight="true" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_img"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/user"
+                android:layout_alignParentRight="true" />
 
-    </RelativeLayout>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -53,7 +53,7 @@
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:background="@color/white"
+        android:background="@color/white"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation_menu">
 
