--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,11 +53,12 @@
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        app:itemBackground="@drawable/nav_color"
+        app:itemIconTint="@color/bottom_nav_color"
+        app:itemTextColor="@color/bottom_nav_color"
+        style="@style/Widget.App.BottomNavigationView"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_menu">
+        app:menu="@menu/bottom_navigation_menu"/>
 
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
