--- a/app/src/main/res/layout/futsal_layout.xml
+++ b/app/src/main/res/layout/futsal_layout.xml
@@ -21,7 +21,7 @@
                         android:id="@+id/ivImage"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:src="@drawable/booking" />
+                        android:src="@drawable/bookingfill" />
 
                     <TextView
                         android:id="@+id/tvTitle"
