--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.App" parent="Theme.FutsalApp">
-        ...
+
         <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
     </style>
 
     <style name="Widget.App.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/green</item>
     </style>
 
     <style name="ThemeOverlay.App.BottomNavigationView" parent="">
         <item name="colorPrimary">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="itemIconTint">@color/green</item>
+        <item name="colorOnPrimary">@color/green</item>
     </style>
 
 </resources>
