--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:src="@drawable/futsallogo"
+        android:src="@drawable/greenfutsal"
         android:scaleType="center"/>
     <LinearLayout
         android:layout_width="match_parent"
