--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,28 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".SignupActivity">
 
-    <androidx.cardview.widget.CardView
+    <ImageView
         android:id="@+id/header_layout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/green"
-        android:elevation="15dp">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/insta_img"
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/futsallogo"/>
-
-
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginLeft="45dp"
+        android:src="@drawable/greenfutsal"
+        android:scaleType="center"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
