--- a/app/src/main/res/layout/futsal_layout.xml
+++ b/app/src/main/res/layout/futsal_layout.xml
@@ -2,30 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardview"
-                android:layout_width="wrap_content"
+                android:layout_width="200sp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:elevation="3dp"
                 android:layout_margin="4dp"
                 app:cardUseCompatPadding="true">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="200sp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <ImageView
                         android:id="@+id/ivImage"
-                        android:layout_width="150dp"
+                        android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:src="@drawable/bookingfill" />
 
                     <TextView
                         android:id="@+id/tvTitle"
-                        android:layout_width="match_parent"
+                        android:layout_width="200sp"
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:gravity="center"
