--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,9 +11,9 @@
         android:icon="@drawable/comm"
         android:title="@string/community_label"/>
     <item
-        android:id="@+id/booking"
+        android:id="@+id/event"
         android:enabled="true"
-        android:icon="@drawable/bookingfill"
-        android:title="@string/booking_label"/>
+        android:icon="@drawable/event"
+        android:title="@string/event_label"/>
 
 </menu>
