--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/futsal"
+        android:id="@+id/futsalfrag"
         android:enabled="true"
         android:icon="@drawable/fieldfill"
         android:title="@string/futsal_label"/>
     <item
-        android:id="@+id/community"
+        android:id="@+id/communityfrag"
         android:enabled="true"
         android:icon="@drawable/comm"
         android:title="@string/community_label"/>
     <item
-        android:id="@+id/event"
+        android:id="@+id/eventfrag"
         android:enabled="true"
         android:icon="@drawable/event"
         android:title="@string/event_label"/>
