--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -15,5 +15,10 @@
         android:enabled="true"
         android:icon="@drawable/event"
         android:title="@string/event_label"/>
+    <item
+        android:id="@+id/userfrag"
+        android:enabled="true"
+        android:icon="@drawable/userpng"
+        android:title="@string/user_label"/>
 
 </menu>
