--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@color/purple_200"
+    android:id="@+id/posts"
     android:padding="10dp">
 
     <TextView
