--- a/app/src/main/res/layout/activity_postdetail.xml
+++ b/app/src/main/res/layout/activity_postdetail.xml
@@ -124,7 +124,7 @@
 
 
             <EditText
-                android:id="@+id/comment_edt"
+                android:id="@+id/commentadd"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -139,12 +139,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/comment_edt"
+                android:layout_toEndOf="@+id/commentadd"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:text="Comment"
-                android:layout_toRightOf="@+id/comment_edt" />
+                android:layout_toRightOf="@+id/commentadd" />
 
 
         </RelativeLayout>
