--- a/app/src/main/res/layout/booking_layout.xml
+++ b/app/src/main/res/layout/booking_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@color/gradEnd"
+    android:background="@color/teal_200"
     android:padding="10dp">
 
     <TextView
@@ -16,6 +16,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:text="Futsal name"
+        android:textSize="17sp"
         app:layout_constraintStart_toEndOf="@+id/tvNumber"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,6 +28,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="4dp"
         android:text="Booking Date"
+        android:textSize="17sp"
         app:layout_constraintStart_toEndOf="@+id/tvfutsalname"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +39,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
-        android:text="Futsal Name"
+        android:text="Time"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/tvNumber"
         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
@@ -45,12 +48,12 @@
             android:id="@+id/btnDelete"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="12dp"
             android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvtime"
+            app:layout_constraintTop_toBottomOf="@+id/tvDate"
             android:src="@drawable/ic_delete" />
 
 
