--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:backgroundTint="@color/green"
         android:elevation="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/grad">
 
             <ImageView
                 android:id="@+id/logo_img"
