--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@color/purple_200"
+    android:background="@color/teal_200"
     android:id="@+id/posts"
     android:padding="10dp">
 
@@ -17,6 +17,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:text="Full Name"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/imgProfile"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,48 +29,28 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:text="Created At"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/tvUsername"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvPost"
-        android:layout_width="180dp"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
         android:text="Post"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/imgProfile"
         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btnDelete"-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        android:layout_marginRight="4dp"-->
-<!--        android:scaleType="fitXY"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:srcCompat="@android:drawable/ic_delete" />-->
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btnUpdate"-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        android:layout_marginRight="4dp"-->
-<!--        android:scaleType="fitXY"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/btnDelete"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:srcCompat="@android:drawable/ic_menu_edit" />-->
 
     <ImageView
         android:id="@+id/imgProfile"
-        android:layout_width="84dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="70dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
