--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -25,8 +25,8 @@
                     android:layout_width="120dp"
                     android:id="@+id/userimage"
                     android:layout_height="120dp"
-                    android:layout_margin="9dp"
-                    android:src="@drawable/user" />
+                    android:layout_margin="9dp" />
+
 
             </RelativeLayout>
 
